--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://t.me/voronki_miniapp_bot/aboutme?startapp=a_4x6i6wl6CxSJFSW5Zv1l1N_lp_utmtg">
+<meta http-equiv="refresh" content="0; https://69625b345714d736199c523d--chipper-llama-020cb9.netlify.app/">
 <title>Redirecting...</title>
 </head>
 <body>
-If you are not redirected automatically, <a href="https://t.me/voronki_miniapp_bot/aboutme?startapp=a_4x6i6wl6CxSJFSW5Zv1l1N_lp_utmtg">click here</a>.
+If you are not redirected automatically, <a href="https://69625b345714d736199c523d--chipper-llama-020cb9.netlify.app/">click here</a>.
 </body>
 </html>
