--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; https://69625b345714d736199c523d--chipper-llama-020cb9.netlify.app/">
+<meta http-equiv="refresh" content="0; https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">
 <title>Redirecting...</title>
 </head>
 <body>
-If you are not redirected automatically, <a href="https://69625b345714d736199c523d--chipper-llama-020cb9.netlify.app/">click here</a>.
+If you are not redirected automatically, <a href="https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">click here</a>.
 </body>
 </html>
