--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">
-<title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0;url=https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">
+    <title>Redirecting...</title>
 </head>
 <body>
-If you are not redirected automatically, <a href="https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">click here</a>.
+    If you are not redirected automatically,
+    <a href="https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">
+        click here
+    </a>.
 </body>
 </html>
