--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">
+    <meta http-equiv="refresh" content="0;url=https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp&utm_source=tg">
     <title>Redirecting...</title>
 </head>
 <body>
     If you are not redirected automatically,
-    <a href="https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp">
+    <a href="https://t.me/zoom_razbori_bot/aboutme?startapp=a_3JgomIJH8RuYOl3ldU4HxC_lp&utm_source=tg">
         click here
     </a>.
 </body>
